Doc page added for Using available optimizers, outputs can be custom defined by the optimizer

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -8,7 +8,7 @@
 /* You can override the default Infima variables here. */
 
 :root {
-    --ifm-color-primary: #FF4F00;
+    --ifm-color-primary: #32064A;
     --ifm-color-primary-dark: #e64700;
     --ifm-color-primary-darker: #d94300;
     --ifm-color-primary-darkest: #b33700;
